<resources>
    <string name="app_name" translatable="false">PurrfectFinder</string>
    <string name="title" translatable="false">Purrfect Finder</string>

    <!--Splash Screen-->

    <string name="splashDesc">Ваш помощник в поиске пушистых друзей</string>

    <!--On Boarding-->

    <string name="obTitle1">Коты ищут заботливые руки!</string>
    <string name="obDesc1">Не упустите шанс подарить им любовь</string>

    <string name="obTitle2">Не беспокойтесь при продаже</string>
    <string name="obDesc2">Наши пользователи в ответе за тех, кого приручили!</string>

    <string name="obTitle3">Ваш идеальный кот рядом!</string>
    <string name="obDesc3">Найдите верного пушистика, используя персональный подбор</string>

    <string name="ob_progress_lines">Линии прогресса</string>
    <string name="ob_happy_man_with_cat">Счастливый мужчина с котом</string>
    <string name="happy_woman_with_cat">Счастливая женщина с котом</string>

    <string name="next">Далее</string>
    <string name="prev">Назад</string>
    <string name="skip">Пропустить</string>

    <string name="btnNextTextOB3">Найти кота!</string>

    <!--Authorization Page-->

    <string name="auth">Войти</string>
    <string name="auth_google">Войти через Google</string>
    <string name="registration">Зарегистрироваться</string>

    <!--Registration-->

    <string name="create_account">Создать аккаунт</string>
    <string name="email">Электронная почта</string>
    <string name="input_email">Введите электронную почту</string>
    <string name="error_email">Некорректная электронная почта</string>

    <string name="user_exist">Email уже используется</string>

    <string name="thinkup_password">Придумайте пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="input_password">Введите пароль</string>
    <string name="error_password">Некорректный пароль</string>
    <string name="different_passwords">Пароли не совпадают</string>

    <string name="conf_policy">Я согласен с условиями обслуживания и политикой конфиденциальности</string>

    <string name="second_name">Фамилия</string>
    <string name="input_second_name">Введите фамилию</string>
    <string name="error_second_name">Некорректная фамилия</string>

    <string name="first_name">Имя</string>
    <string name="input_first_name">Введите имя</string>
    <string name="error_first_name">Некорректное имя</string>

    <string name="middle_name">Отчество (при наличии)</string>
    <string name="input_middle_name">Введите отчество</string>

    <string name="birthday">День рождения</string>
    <string name="placeholder_birthday">ДД/ММ/ГГГГ</string>

    <string name="your_role">Ваша роль</string>
    <string-array name="roles_array">
        <item >Покупатель</item>
        <item >Продавец</item>
    </string-array>

    <string-array name="breeds_array">
        <item >Без породы</item>
        <item >Манчкин</item>
        <item >Тойгер</item>
    </string-array>

    <string-array name="colors_array">
        <item >Разноцветный</item>
        <item >Серый</item>
        <item >Персиковый</item>
    </string-array>

    <string name="gender">Пол</string>
    <string name="gender_man">Мужской</string>
    <string name="gender_woman">Женский</string>


    <string name="pfp_description">Добавление фотографии поможет покупателям и владельцам котов узнать друг друга при встрече</string>
    <string name="verif_description">Рекомендуем пройти тест для получения значка проверенного пользователя (можно сделать это позже)</string>

    <string name="start_test">Пройти тест</string>
    <string name="cat_add_question">У вас есть котики?</string>
    <string name="add_cat_desc">Вы можете начать вести блог о своих котах. Так, если Вам захочется отдать пушистика, желающие смогут познакомиться с ним поближе</string>
    <string name="add_post">Добавить пост</string>
    <string name="done">Готово</string>
    <string name="reg_done">Завершение регистрации</string>
    <string name="congrats">Поздравляем!</string>
    <string name="success_reg">Вы успешно зарегистрировались</string>
    <string name="log_in_account">Войдите в аккаунт</string>
    <string name="please_login">Пожалуйста, введите свои данные</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="account_exists">Уже есть аккаунт?</string>
    <string name="no_connection_title">Нет подключения к интернету</string>
    <string name="no_connection_description">Проверьте подключение и повторите попытку</string>
    <string name="retry">Повторить попытку</string>

    <string name="your_profile">Ваш профиль</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="settings">Настройки</string>

    <string name="advertisements">Объявления</string>
    <string name="ad_found">Найдено объявлений</string>

    <string name="loading_text">Загрузка</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>