<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivity">

    <!--Хэдер-->


    <TextView
        android:id="@+id/tvLoginTitle"
        style="@style/BoldText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:text="@string/log_in_account"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLoginDesc"
        style="@style/RegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_login"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle" />

    <!--Электронная почта-->

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="89dp"
        android:layout_marginStart="29dp"
        android:text="@string/email"
        style="@style/RegularText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLoginDesc" />

    <!--app:helperText="@string/error_email"-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/l_email"
        style="@style/TextInputBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        app:placeholderText="@string/input_email"
        app:boxStrokeErrorColor="@color/errorColor"
        app:errorEnabled="true"
        app:helperTextTextColor="@color/errorColor"
        app:placeholderTextAppearance="@style/PlaceholderTextStyle"
        app:placeholderTextColor="@color/textInputColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:inputType="textEmailAddress"
            android:textColor="#525252"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Придумайте пароль-->

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:text="@string/password"
        style="@style/RegularText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/l_email" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/l_password"
        style="@style/TextInputBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword"
        app:placeholderText="@string/input_password"
        app:boxStrokeErrorColor="@color/errorColor"
        app:errorEnabled="true"
        app:helperTextTextColor="@color/errorColor"
        app:placeholderTextAppearance="@style/PlaceholderTextStyle"
        app:placeholderTextColor="@color/textInputColor"

        app:endIconMode="password_toggle"
        app:endIconTint="@color/passToggleColor"

        app:counterEnabled="true"
        app:counterMaxLength="20">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:inputType="textPassword"
            android:textColor="#525252"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <android.widget.Button
        android:id="@+id/btnForgotPass"
        style="@style/ButtonDarkText"
        android:layout_width="305dp"
        android:textFontWeight="300"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:text="@string/forgot_password"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l_password" />

    <android.widget.Button
        android:id="@+id/btnLogin"
        style="@style/ButtonLightText"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="47dp"
        android:background="@drawable/shape_button_body"
        android:paddingVertical="13dp"
        android:text="@string/auth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnForgotPass" />

    <FrameLayout
        android:id="@+id/flGoogleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="60dp"
            android:src="@drawable/ic_google" />

        <android.widget.Button
            android:id="@+id/btnGoogleLogin"
            style="@style/ButtonDarkText"
            android:textFontWeight="300"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="35dp"
            android:background="@drawable/shape_spinner_stroke"
            android:paddingVertical="13dp"
            android:text="@string/auth_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            tools:ignore="RtlSymmetry" />

    </FrameLayout>

    <android.widget.Button
        android:id="@+id/btnReg"
        style="@style/ButtonDarkText"
        android:textFontWeight="300"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:layout_marginTop="36dp"
        android:text="@string/registration"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flGoogleLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>