<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration.RegistrationTestActivity">

    <!--Хэдер-->

    <FrameLayout
        android:id="@+id/LayoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.widget.Button
            android:id="@+id/btnPrev"
            android:layout_width="11dp"
            android:layout_height="21dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/ic_back"
            android:fontFamily="@font/comfortaa"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/tvCreateAccount"
            style="@style/SemiBoldText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>

    <!--pfp-->

    <FrameLayout
        android:id="@+id/flPFP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LayoutHeader">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_user_pfp" />

        <android.widget.Button
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="87dp"
            android:background="@drawable/ic_plus" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvPFPDesc"
        style="@style/RegularText"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:text="@string/pfp_description"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flPFP" />

    <!--verif-->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_verified"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPFPDesc" />

    <TextView
        android:id="@+id/tvVerifDesc"
        style="@style/RegularText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:gravity="center"
        android:text="@string/verif_description"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <android.widget.Button
        android:id="@+id/btnStartTest"
        style="@style/ButtonLightText"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="131dp"
        android:background="@drawable/shape_button_body"
        android:backgroundTint="@color/greenBtnColor"
        android:paddingVertical="13dp"
        android:text="@string/start_test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvVerifDesc" />

    <android.widget.Button
        android:id="@+id/btnSkip"
        style="@style/ButtonDarkText"
        android:textFontWeight="300"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:layout_marginTop="10dp"
        android:text="@string/skip"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartTest" />

</androidx.constraintlayout.widget.ConstraintLayout>